--- a/questionnaire.html
+++ b/questionnaire.html
@@ -104,7 +104,7 @@
     });
   }
 
-  const GAS_ENDPOINT = 'PASTE_YOUR_DEPLOYED_GAS_WEBAPP_URL_HERE';
+  const GAS_ENDPOINT = 'https://script.google.com/macros/s/AKfycbwHM8NLdiJyIli-yz78ProJ3JxWM3bM3kalhSlw1rB3ImMaeEC_L2yWVR-HJ8bn68ei6w/exec
 
   document.getElementById('qForm').addEventListener('submit', async function(e){
     e.preventDefault();
