--- a/index.html
+++ b/index.html
@@ -1,95 +1,37 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Allergen Atlas — Join the waitlist</title>
-<style>
-  :root{--accent:#0b7285;--bg:#fafafa;--card:#ffffff;--muted:#666;}
-  body{font-family:system-ui,-apple-system,Segoe UI,Roboto,"Helvetica Neue",Arial;margin:0;background:var(--bg);color:#222}
-  .wrap{max-width:760px;margin:48px auto;padding:20px}
-  header{text-align:center;margin-bottom:18px}
-  h1{margin:0 0 6px;font-size:1.6rem}
-  p.lead{margin:0;color:var(--muted)}
-  .card{background:var(--card);padding:18px;border-radius:12px;box-shadow:0 6px 18px rgba(12,12,12,.06)}
-  form{display:grid;gap:12px}
-  label{font-size:.92rem;color:#333}
-  input[type="text"],input[type="email"],input[type="date"]{
-    width:100%;padding:10px;border-radius:8px;border:1px solid #e6e6e6;font-size:1rem;box-sizing:border-box
-  }
-  .row{display:flex;gap:12px}
-  .row .col{flex:1}
-  .muted{font-size:.86rem;color:var(--muted)}
-  button{background:var(--accent);color:#fff;border:0;padding:11px;border-radius:10px;font-size:1rem;cursor:pointer}
-  .socials{display:flex;gap:10px;justify-content:center;margin-top:18px}
-  .socials a{display:inline-flex;align-items:center;justify-content:center;width:40px;height:40px;border-radius:8px;background:#fff;box-shadow:0 2px 8px rgba(0,0,0,.06)}
-  footer{margin-top:18px;text-align:center;color:var(--muted);font-size:.88rem}
-  @media (max-width:560px){.wrap{margin:18px;padding:12px}}
-</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Allergen Atlas - Sign Up</title>
+    <style>
+        body { font-family: Arial, sans-serif; max-width: 600px; margin: auto; padding: 20px; }
+        img.logo { max-width: 150px; display: block; margin: auto; }
+        form { display: flex; flex-direction: column; }
+        label { margin-top: 10px; }
+        button { margin-top: 20px; padding: 10px; background: orange; border: none; color: white; font-size: 16px; cursor: pointer; }
+        .privacy-note { font-size: 0.9em; margin-top: 10px; }
+    </style>
 </head>
 <body>
-  <div class="wrap">
-    <header>
-      <h1>Allergen Atlas</h1>
-      <p class="lead">Sign up to be notified — help make dining out safer for food allergy & intolerance sufferers.</p>
-    </header>
+    <img src="logo.jpg" alt="Allergen Atlas Logo" class="logo">
+    <h1>Join Our Waiting List</h1>
+    <form id="page1Form">
+        <label>First Name:<input type="text" name="firstName" required></label>
+        <label>Last Name:<input type="text" name="lastName" required></label>
+        <label>Date of Birth:<input type="date" name="dob" required></label>
+        <label>Email:<input type="email" name="email" required></label>
+        <button type="submit">Next</button>
+    </form>
+    <p class="privacy-note"><a href="privacy.html" target="_blank">Privacy Policy</a></p>
 
-    <div class="card">
-      <form id="leadForm">
-        <div class="row">
-          <div class="col">
-            <label for="firstName">First name</label>
-            <input id="firstName" name="firstName" type="text" placeholder="First name" required>
-          </div>
-          <div class="col">
-            <label for="lastName">Second name</label>
-            <input id="lastName" name="lastName" type="text" placeholder="Second name" required>
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="col">
-            <label for="dob">Date of birth</label>
-            <input id="dob" name="dob" type="date" required>
-          </div>
-          <div class="col">
-            <label for="email">Email address</label>
-            <input id="email" name="email" type="email" placeholder="you@domain.com" required>
-          </div>
-        </div>
-
-        <p class="muted">We use your email only to send updates. You can export all data to Excel at any time.</p>
-        <button type="submit">Continue</button>
-      </form>
-    </div>
-
-    <footer>
-      <div class="socials" aria-hidden>
-        <a href="https://instagram.com/yourhandle" target="_blank" title="Instagram" rel="noopener">IG</a>
-        <a href="https://tiktok.com/@yourhandle" target="_blank" title="TikTok" rel="noopener">TT</a>
-        <a href="https://x.com/yourhandle" target="_blank" title="X" rel="noopener">X</a>
-        <a href="https://linkedin.com/in/yourhandle" target="_blank" title="LinkedIn" rel="noopener">IN</a>
-      </div>
-      <div style="margin-top:10px">© Allergen Atlas</div>
-    </footer>
-  </div>
-
-<script>
-  document.getElementById('leadForm').addEventListener('submit', function(e){
-    e.preventDefault();
-    const data = {
-      firstName: document.getElementById('firstName').value.trim(),
-      lastName: document.getElementById('lastName').value.trim(),
-      dob: document.getElementById('dob').value,
-      email: document.getElementById('email').value.trim()
-    };
-    if(!data.firstName || !data.lastName || !data.email || !data.dob){
-      alert('Please complete all fields.');
-      return;
-    }
-    localStorage.setItem('allergen_atlas_lead', JSON.stringify(data));
-    window.location.href = 'questionnaire.html';
-  });
-</script>
+    <script>
+        document.getElementById('page1Form').addEventListener('submit', function(e) {
+            e.preventDefault();
+            const data = Object.fromEntries(new FormData(e.target).entries());
+            localStorage.setItem('page1Data', JSON.stringify(data));
+            window.location.href = 'questionnaire.html';
+        });
+    </script>
 </body>
 </html>
