--- a/privacy.html
+++ b/privacy.html
@@ -1,16 +1,38 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Privacy Policy</title>
-    <style>
-        body { font-family: Arial, sans-serif; max-width: 800px; margin: auto; padding: 20px; }
-    </style>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
+<title>Allergen Atlas — Privacy Policy</title>
+<style>
+body{font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial;max-width:900px;margin:40px auto;padding:24px;color:#111}
+h1{font-size:1.6rem}
+small{color:#666}
+section{margin-top:18px}
+</style>
 </head>
 <body>
-    <h1>Privacy Policy</h1>
-    <p>We collect your details to keep you updated on the Allergen Atlas app launch. Your data will be stored securely and will not be shared with third parties without your consent.</p>
-    <p>You may request deletion of your data at any time by contacting us.</p>
+  <h1>Privacy Policy</h1>
+  <p><small>Last updated: 2025</small></p>
+
+  <section>
+    <h2>What we collect</h2>
+    <p>We collect your name, date of birth, email address and allergy details so we can notify you about Allergen Atlas, personalise your experience and improve our service.</p>
+  </section>
+
+  <section>
+    <h2>How we store data</h2>
+    <p>Data is stored in a Google Sheet associated with our account. You can export your data to Excel at any time. We will retain your data until you ask us to delete it.</p>
+  </section>
+
+  <section>
+    <h2>Your rights</h2>
+    <p>You can request access, correction or deletion of your data by contacting us at <a href="mailto:hello@yourdomain.com">hello@yourdomain.com</a>.</p>
+  </section>
+
+  <section>
+    <h2>Cookies & tracking</h2>
+    <p>We use localStorage only to temporarily store your form progress between pages. No analytics are enabled by default in this preview.</p>
+  </section>
 </body>
 </html>
