--- a/thankyou.html
+++ b/thankyou.html
@@ -1,17 +1,26 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Allergen Atlas - Thank You</title>
-    <style>
-        body { font-family: Arial, sans-serif; text-align: center; padding: 50px; }
-        img.logo { max-width: 150px; display: block; margin: auto; }
-    </style>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
+<title>Allergen Atlas — Thank you</title>
+<link rel="icon" href="logo.jpg">
+<style>
+:root{--bg:#ffffff;--accent:#e06129}
+body{margin:0;font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial;background:var(--bg);color:#111;display:flex;align-items:center;justify-content:center;height:100vh;padding:24px}
+.card{max-width:760px;text-align:center}
+img.logo{width:110px;height:110px;object-fit:contain;border-radius:14px;box-shadow:0 12px 40px rgba(0,0,0,0.06)}
+h1{font-size:1.6rem;margin:18px 0 6px}
+p{color:#555;font-size:1rem}
+.button{margin-top:20px;padding:12px 16px;border-radius:10px;border:none;background:linear-gradient(180deg,var(--accent),#c65420);color:#fff;cursor:pointer}
+</style>
 </head>
 <body>
-    <img src="logo.jpg" alt="Allergen Atlas Logo" class="logo">
-    <h1>Thank You</h1>
+  <div class="card">
+    <img src="logo.jpg" alt="Allergen Atlas logo" class="logo">
+    <h1>Thank you</h1>
     <p>You are now on the waiting list and will be one of the first to be notified when the app is live.</p>
+    <p style="margin-top:16px"><a href="index.html" style="color:#e06129;text-decoration:none">Return to homepage</a></p>
+  </div>
 </body>
 </html>
